# finetuning_model_crewai

./: .gitignore  README.md  add_model_in_ollamd.txt  pyproject.toml  view_database.py
fine_tune_models/: dr-pationts-Fine‑Tuning.ipynb
fine_tune_models/assessment-plan/: Modelfile
fine_tune_models/objective_exam/: Modelfile
fine_tune_models/subjective_Acute_Symptoms_history_summary_agents/clinical_summary_agent/: Modelfile  dr-pationts-Fine‑Tuning.ipynb
fine_tune_models/subjective_Acute_Symptoms_history_summary_agents/subjective_agent_Acute_Symptoms/: Modelfile  dr-pationts-Fine‑Tuning.ipynb
fine_tune_models/subjective_Acute_Symptoms_history_summary_agents/subjective_agent_history/: Modelfile  dr-pationts-Fine‑Tuning.ipynb
src/finetuning_model_crewai/: crew.py  database_layer.py  init_database.py  main.py
src/finetuning_model_crewai/config/: agents copy.yaml  agents.yaml  tasks.yaml
