[project]
name = "finetuning_model_crewai"
version = "0.1.0"
description = "Finetuning-model-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
finetuning_model_crewai = "finetuning_model_crewai.main:run"
run_crew = "finetuning_model_crewai.main:run"
train = "finetuning_model_crewai.main:train"
replay = "finetuning_model_crewai.main:replay"
test = "finetuning_model_crewai.main:test"
run_with_trigger = "finetuning_model_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
